force-app/main/default/objects/Lead/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The unique Identifier for a web enquiry</description>
    <externalId>true</externalId>
    <inlineHelpText>The unique Identifier for a web enquiry</inlineHelpText>
    <label>External Reference</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>