force-app/main/default/objects/Lead/fields/Postcode_Callout_Exception__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Callout_Exception__c</fullName>
    <description>Not user facing, helpful field for the dev to debug with if postcode enrichment is failing</description>
    <inlineHelpText>Not user facing, helpful field for the dev to debug with if postcode enrichment is failing</inlineHelpText>
    <label>Postcode Callout Exception</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>